--- a/css/main.css
+++ b/css/main.css
@@ -2956,7 +2956,21 @@ textarea {
     -webkit-transition: 0.6s;
     transition: 0.6s; }
   .page-header-alpha .navbar-mainmenu {
-    background: rgba(29, 29, 29, 0.5); } }
+    background: rgba(29, 29, 29, 0.5); }
+  .media h4 {
+      font-size: 1.7rem;
+      padding-left: 5%;
+      padding-top: 3%;
+  }
+}
+
+@media (max-width: 768px) {
+  .media h4 {
+    font-size: 2rem;
+    padding-left: 5%;
+    padding-top: 3%;
+  }
+}
 
 .menu-icon {
   height: 40px;
