--- a/css/main.css
+++ b/css/main.css
@@ -3187,7 +3187,7 @@ textarea {
     width: 100%;
     height: 100%;
     /*  Page cover background image,color */
-    background: url(../img/bg-default.jpg);
+    /* background: url(../img/bg-default.jpg); */
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
