--- a/css/main.css
+++ b/css/main.css
@@ -4616,6 +4616,10 @@ textarea {
     font-size: 4.5rem;
   }
 
+.media .img {
+  font-size: 4.5rem;
+}
+
 .project-list {
   display: -webkit-box;
   display: -ms-flexbox;
