--- a/projects/steady_eats/food.css
+++ b/projects/steady_eats/food.css
@@ -284,7 +284,7 @@ table{
   margin-bottom: 20px !important;
 }
 
-#mapCloseButton {
+.modal-footer > #mapCloseButton {
   margin-right: 16px;
 }
 
@@ -298,4 +298,8 @@ table{
 
 .error-message {
   font-size: 1.5rem;
+}
+
+#mapCloseButton {
+  cursor: pointer;
 }
