--- a/projects/injustice/style.css
+++ b/projects/injustice/style.css
@@ -255,11 +255,11 @@ img {
 }
 
 .modal_text {
-    font-size: 1.8em;
+    font-size: 1.8rem;
 }
 
 .about_modal_text {
-    font-size: 1.5em;
+    font-size: 1.5rem;
     padding-top: 14%;
     padding-bottom: 15%;
     width: 80%;
