--- a/projects/injustice/style.css
+++ b/projects/injustice/style.css
@@ -106,6 +106,12 @@ img {
     }
 }
 
+@media only screen and (min-width: 400px) {
+    .player {
+        width: 10%
+    }
+}
+
 @media only screen and (max-height: 725px) {
     .card img {
         max-width: 60%;
