--- a/css/main.css
+++ b/css/main.css
@@ -3956,7 +3956,7 @@ textarea {
 
 .section-content .title-desc {
   margin-bottom: 2rem; 
-  text-shadow: 2px 2px black; }
+  text-shadow: 1px 2px 10px black; }
 .title-desc h1, .title-desc h4, .title-desc h2 {
     text-shadow: 2px 2px black; }
   @media (min-width: 768px) {
