--- a/css/main.css
+++ b/css/main.css
@@ -2977,9 +2977,9 @@ textarea {
 }
 }
 
-@media (max-width: 300px) {
+@media (max-width: 320px) {
   .project-list .media h4 {
-    font-size: 1rem;
+    display: none;
   }
 }
 
